<resources>
    <string name="app_name">LastProject5_music</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="start_sound">Start Sound</string>
    <string name="stop_sound">Stop Sound</string>
    <string name="next_sound">Next Sound</string>
    <string name="pause_sound">Pause Sound</string>
    <string name="resume_sound">Resume Sound</string>
</resources>